--- a/style.css
+++ b/style.css
@@ -741,7 +741,6 @@ i {
     background-color: #F5F5F5;
     border: 1px solid #B5B5B5;
     border-radius: 8px;
-    width: 11rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -980,6 +979,7 @@ i {
 .recorrido-bote .recorrido-bote-td {
     border-bottom-width: 5px;
     border-bottom-color: #31A6FB;
+    cursor: pointer;
 }
 
 .button-ellipsis {
