--- a/style.css
+++ b/style.css
@@ -49,8 +49,8 @@ table .color-white {
     color: #FFF !important;
 }
 
-.fc-daygrid-day{
-    cursor: pointer;    
+.fc-daygrid-day {
+    cursor: pointer;
 }
 
 .fc-daygrid-day-top {
@@ -1016,4 +1016,46 @@ i {
 
 .circle {
     cursor: pointer;
+}
+
+.btn-blue-general {
+    background-color: #31A6FB;
+    border: 1px solid #31A6FB;
+    color: white;
+    border-radius: 10px;
+    padding: .25rem 1.2rem .25rem 1.2rem;
+}
+
+.bg-gray-light2 {
+    background-color: #E8E8E8;
+}
+
+.btn-icon-gray {
+    background-color: transparent;
+    color: #B5B5B5;
+    border: 0;
+}
+
+.btn-icon-red {
+    background-color: transparent;
+    color: #FF0000;
+    border: 0;
+}
+
+
+.btn-general-gray {
+    background-color: #F5F5F5;
+    color: #464646;
+    border: 1px solid #B5B5B5;
+    padding: .3rem 1.5rem .3rem 1.5rem;
+    border-radius: 10px;
+    font-weight: bold;
+}
+
+.btn-blue-dark-general {
+    background-color: #1D6CAF;
+    color: #FFFFFF;
+    border: 0;
+    border-radius: 10px;
+    padding: .5rem 1.3rem .5rem 1.3rem;
 }
