--- a/style.css
+++ b/style.css
@@ -114,6 +114,7 @@ table .color-white {
     margin-right: 1rem;
     padding: .3rem;
     margin-bottom: 1rem;
+    color: #808080;
 }
 
 .btns-hour button:disabled {
@@ -351,6 +352,10 @@ hr {
     margin-right: 1rem !important;
 }
 
+.btn-blue:disabled {
+    background-color: #f5f5f5 !important;
+}
+
 .f-8 {
     font-size: .8rem !important;
 }
@@ -487,13 +492,13 @@ hr {
 }
 
 .container-btn {
-    border: 1px solid #e5e5e5;
+    border: 1px solid #b5b5b5;
     border-radius: 8px;
     padding: 0.23em 1.6rem;
     margin: 1rem 1.5rem;
     cursor: pointer;
-    background-color: #f5f5f5;
-    color: #e5e5e5;
+    background-color: #FFF;
+    color: #464646;
 }
 
 .size-img-resume {
@@ -1063,4 +1068,20 @@ i {
 
 .mt-7 {
     margin-top: 7rem;
+}
+
+.btns-hour button:hover{
+    background-color: #1d6caf;
+    color: #FFF;
+    border: 1px solid #1d6caf;
+}
+
+.btns-hour .active{
+    background-color: #1d6caf;
+    color: #FFF;
+    border: 1px solid #1d6caf;
+}
+
+.mt-4_5 {
+    margin-top: 2rem;
 }
