--- a/style.css
+++ b/style.css
@@ -312,7 +312,7 @@ table .color-white {
 }
 
 hr {
-    margin: 0;
+    margin: 0 !important;
     opacity: .1 !important;
 }
 
@@ -817,18 +817,6 @@ i {
     color: #ddd;
 }
 
-#btn-atras {
-    width: 100px;
-    padding: 4px;
-    background-color: #F5F5F5;
-    border-radius: 5px;
-    cursor: pointer;
-    border: 1px solid #DFDFDF;
-    position: relative;
-    top: -2rem;
-    left: 4rem;
-}
-
 @media(min-width: 1200px) and (max-width: 1399px) {
     .size-img-grid {
         width: 100%;
@@ -1055,36 +1043,6 @@ i {
     padding: .15rem;
 }
 
-.btn-atras {
-    background-color: #f5f5f5;
-    border: 1px solid #B5B5B5;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border-radius: 8px;
-    padding-top: .5rem;
-    padding-bottom: .5rem;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    color: #464646;
-}
-
-.btn-atras>svg,
-.tbn-atras>i {
-    width: 14px;
-    height: 14px;
-    padding: .15rem;
-    border-radius: 50rem;
-    font-size: .9rem;
-    margin-right: 1rem;
-    background-color: #B5B5B5;
-    color: #F5F5F5;
-}
-
-.btn-atras>b,
-.btn-atras>strong {
-    font-size: .8rem;
-}
 
 .btn-descartar {
     background-color: #F5F5F5;
@@ -1275,13 +1233,13 @@ i {
     margin-top: 7rem !important;
 }
 
-.btns-hour button:hover{
+.btns-hour button:hover {
     background-color: #1d6caf;
     color: #FFF;
     border: 1px solid #1d6caf;
 }
 
-.btns-hour .active{
+.btns-hour .active {
     background-color: #1d6caf;
     color: #FFF;
     border: 1px solid #1d6caf;
@@ -1289,4 +1247,27 @@ i {
 
 .mt-4_5 {
     margin-top: 2rem;
+}
+
+.btn-atras {
+    display: flex;
+    align-items: center;
+    background: #f5f5f5;
+    border: 1px solid #f5f5f5;
+    border-radius: 8px;
+    padding-top: .4rem;
+    padding-bottom: .4rem;
+}
+
+.btn-atras>i {
+    padding-left: 1rem;
+    color: #b8b8b8;
+    font-size: 1rem;
+    margin-right: .6rem;
+}
+
+.btn-atras>strong {
+    padding-right: 1rem;
+    color: #4b4b4b;
+    font-size: .8rem;
 }
