--- a/style.css
+++ b/style.css
@@ -1271,3 +1271,11 @@ i {
     color: #4b4b4b;
     font-size: .8rem;
 }
+
+.mt-sm07 {
+    margin-top: .7rem;
+}
+
+.color-gray-responsable {
+    color: #C6C6C6;
+}
