--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url('spinner.css');
+@import url('timeline.css');
 
 span,
 p,
@@ -392,107 +394,6 @@ hr {
     /* width: 300px; */
 }
 
-.timeline {
-    width: 100%;
-    height: 100px;
-    /*max-width: 800px; */
-    margin: 0 auto;
-    display: flex;
-    justify-content: center;
-}
-
-.timeline .events {
-    position: relative;
-    background-color: #606060;
-    height: 3px;
-    width: 100%;
-    border-radius: 4px;
-}
-
-.timeline .events ol {
-    margin: 0;
-    padding: 0;
-    text-align: center;
-}
-
-.timeline .events ul {
-    list-style: none;
-}
-
-.timeline .events ul li {
-    display: inline-block;
-    width: 9.65%;
-    margin: 0;
-    padding: 0;
-}
-
-.timeline .events ul li a {
-    font-family: 'Arapey', sans-serif;
-    font-size: .7em;
-    color: #606060;
-    text-decoration: none;
-    position: relative;
-    top: -32px;
-}
-
-.timeline .events ul li a:after {
-    content: '';
-    position: absolute;
-    bottom: -25px;
-    left: 50%;
-    right: auto;
-    height: 20px;
-    width: 20px;
-    border-radius: 50%;
-    border: 3px solid #606060;
-    background-color: #fff;
-    transition: 0.3s ease;
-    transform: translateX(-50%);
-}
-
-.timeline .events ul li a:hover::after {
-    background-color: #194693;
-    border-color: #194693;
-}
-
-.timeline .events ul li a.selected:after {
-    background-color: #194693;
-    border-color: #194693;
-    padding: .6rem;
-}
-
-.timeline .events ul li a:after {
-    padding: .6rem;
-}
-
-.events-content {
-    width: 100%;
-    height: 100px;
-    max-width: 800px;
-    margin: 0 auto;
-    display: flex;
-    justify-content: left;
-}
-
-.events-content li {
-    display: none;
-    list-style: none;
-}
-
-.events-content li.selected {
-    display: initial;
-}
-
-.events-content li h2 {
-    font-family: 'Frank Ruhl Libre', serif;
-    font-weight: 500;
-    color: #919191;
-    font-size: 2.5em;
-}
-
-.li {
-    transition: all 200ms ease-in !important;
-}
 
 .circle {
     display: flex !important;
@@ -501,119 +402,6 @@ hr {
     color: #FFF !important;
 }
 
-.center-li-icon {
-    position: relative;
-    right: 1.4rem;
-    bottom: .7rem;
-    color: #FFF;
-    cursor: pointer;
-}
-
-.btn-info-empresa {
-    background-color: #F5F5F5;
-    color: #464646;
-    border: 1px solid #B5B5B5;
-    padding: .3rem 1.5rem .3rem 1.5rem;
-    border-radius: 10px;
-}
-
-.center-li-icon-barco {
-    position: relative;
-    right: 1.67rem;
-    bottom: .8rem;
-    color: #FFF;
-    cursor: pointer;
-}
-
-.center-li-icon-horario {
-    position: relative;
-    right: 1.9rem;
-    bottom: .8rem;
-    color: #FFF;
-    cursor: pointer;
-}
-
-.center-li-icon-fecha {
-    position: relative;
-    right: 1.65rem;
-    bottom: .8rem;
-    color: #FFF;
-    cursor: pointer;
-}
-
-.center-li-icon-responsable {
-    position: relative;
-    right: 3.05rem;
-    bottom: .75rem;
-    color: #FFF;
-    cursor: pointer;
-}
-
-.center-li-icon-asistencia {
-    position: relative;
-    right: 2.6rem;
-    bottom: .8rem;
-    color: #FFF;
-    cursor: pointer;
-}
-
-.center-li-icon-pago {
-    position: relative;
-    right: 1.55rem;
-    bottom: .76rem;
-    color: #FFF;
-    cursor: pointer;
-}
-
-.center-li-icon-end {
-    position: relative;
-    right: 1.25rem;
-    bottom: .69rem;
-    color: #FFF;
-    cursor: pointer;
-}
-
-@media(max-width: 992px) {
-    .flex-lg-nyg-column-reverse {
-        flex-direction: column-reverse;
-    }
-
-    .span-time-line {
-        display: none;
-    }
-
-    .center-li-icon {
-        right: .4rem;
-    }
-
-    .center-li-icon-barco {
-        right: .5rem;
-    }
-
-    .center-li-icon-horario {
-        right: .4rem;
-    }
-
-    .center-li-icon-fecha {
-        right: .4rem;
-    }
-
-    .center-li-icon-responsable {
-        right: .5rem;
-    }
-
-    .center-li-icon-asistencia {
-        right: .5rem;
-    }
-
-    .center-li-icon-pago {
-        right: .4rem;
-    }
-
-    .center-li-icon-end {
-        right: .4rem;
-    }
-}
 
 .text-transparent {
     color: transparent;
@@ -823,29 +611,6 @@ i {
     }
 }
 
-@media (min-device-width: 320px) and (max-device-width: 700px) {
-    /* .timeline {
-      list-style-type: none;
-      display: block;
-    }
-  
-    .li {
-      transition: all 200ms ease-in;
-      display: flex;
-      width: inherit;
-    }
-  
-    .timestamp {
-      width: 100px;
-    }
-  
-    .status .circle {
-      left: -8%;
-      top: 30%;
-      transition: all 200ms ease-in;
-    } */
-}
-
 @media(max-width: 420px) {
     .size-img-grid {
         width: 18rem;
@@ -855,19 +620,6 @@ i {
         height: 26rem;
     }
 }
-
-/* button {
-    position: absolute;
-    width: 100px;
-    min-width: 100px;
-    padding: 20px;
-    margin: 20px;
-    font-family: "Titillium Web", sans serif;
-    border: none;
-    color: white;
-    font-size: 16px;
-    text-align: center;
-  } */
 
 #toggleButton {
     position: absolute;
