--- a/style.css
+++ b/style.css
@@ -1055,3 +1055,49 @@ img.imgPreview {
 .cursor-pointer {
     cursor: pointer;
 }
+
+.card_cliente {
+    color: #707070;
+    font-size: 0.9rem;
+    margin: 0;
+    padding: 0;
+    font-weight: 200; 
+}
+
+.card_cliente-title {
+    font-weight: bold;
+    font-size: 1rem;
+    color: #707070;
+}
+
+.text-blue {
+    color: #1d6caf;
+    font-weight: bold;
+}
+
+.card_cliente-button {
+    color: white;
+    background: #1d6caf;
+    padding: .5rem;
+    border: 0px;
+}
+
+.admin-navs-tabs,
+.nav-link {
+    color: #707070;
+    font-weight: bold;
+}
+
+.nav-tabs {
+    --bs-nav-tabs-border-width: 1.8px;
+    --bs-nav-tabs-border-color: #dee2e6;
+    --bs-nav-tabs-border-radius: 0.375rem;
+    --bs-nav-tabs-link-hover-border-color: #e9ecef #e9ecef #dee2e6;
+    --bs-nav-tabs-link-active-color: #495057;
+    --bs-nav-tabs-link-active-bg: #fff;
+    --bs-nav-tabs-link-active-border-color: #b7b7b7 #b7b7b7 #fff;
+    border-bottom: var(--bs-nav-tabs-border-width) solid #b7b7b7;
+}
+.width200px{
+    width: 200px;
+}
