--- a/style.css
+++ b/style.css
@@ -1158,3 +1158,42 @@ img.imgPreview {
 .color-whatsapp {
     color: #00b20a;
 }
+
+
+.btn-tareas {
+    background-color: #f5f5f5;
+    color: #464646;
+    border: 1px solid #b5b5b5;
+    border-radius: .5rem;
+    padding: .3em 1.7rem .3em 1.7em;
+}
+
+.btn-tareas-blue {
+    background-color: #1d6caf;
+    color: #FFF;
+    border: 1px solid #1d6caf;
+    border-radius: .5rem;
+    padding: .3em 1.7rem .3em 1.7em;
+}
+.btn-tareas svg {
+    margin-left: .5em;
+}
+
+.color-gray-light {
+    color: #b5b5b5;
+}
+
+.fs-11 {
+    font-size: 1.1em;
+}
+
+.btn-regreso {
+    background-color: #f5f5f5;
+    color: #464646;
+    border: 1px solid #b5b5b5;
+    border-radius: .5rem;
+    padding: .3em 1.2em .3em 1.2em;
+}
+.btn-tareas svg {
+    margin-right: .5em;
+}
