--- a/style.css
+++ b/style.css
@@ -1210,6 +1210,22 @@ img.imgPreview {
     opacity: .3;
 }
 
+.height13rem {
+    height: 13rem;
+}
+
+.height-100 {
+    height: 100%;
+}
+
+.min-height37rem {
+    min-height: 37rem;
+}
+
+.min-height9rem {
+    min-height: 9rem;
+}
+
 .lang-style {
     position: fixed;
     right: 0;
@@ -1226,4 +1242,56 @@ img.imgPreview {
         bottom: 0;
         top: auto;
     }
+}
+
+.image-card-nyg {
+    width: 100%;
+    height: 15rem;
+}
+
+.padding-015rem {
+    padding: .15rem;
+}
+
+.border-button-extras {
+    border: 1px solid #B5B5B5;
+    border-radius: 12px;
+}
+
+.button-active-extras > .active {
+    background-color: #1D6CAF;
+    color: white;
+}
+
+.color-limpiar {
+    color: #810000;
+}
+
+.height-11rem {
+    height: 11rem;
+}
+
+.top-image {
+    position: relative;
+    bottom: 11rem;
+    background-color: #1D6CAF;
+    color: #FFFFFF;
+    padding: .15rem;
+    margin-top: .25rem;
+    margin-left: .25rem;
+}
+
+.button-image {
+    position: relative;
+    bottom: 2rem;
+    float: right;
+    background-color: white;
+    margin-right: 1rem;
+    color: #FF0000;
+    border: 0;
+}
+
+.btn-icon-menu {
+    font-size: 1.2rem;
+    margin-right: .5rem;
 }
